--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chalk": "1.1.3",
     "chance": "^1.0.16",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.3.1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -95,7 +96,7 @@
     "@types/redux-thunk": "^2.1.0",
     "prop-types": "^15.6.2",
     "react-beautiful-dnd": "^9.0.2",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.1.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
