--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "raf": "3.4.0",
     "react": "^16.5.2",
     "react-big-calendar": "^0.20.2",
+    "react-bottom-scroll-listener": "^2.1.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
