--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "7.1.6",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
@@ -56,6 +57,7 @@
     "react-bottom-scroll-listener": "^2.1.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.2",
+    "react-image-lightbox": "^5.1.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-textarea-autosize": "^7.0.4",
